--- a/common/common.scss
+++ b/common/common.scss
@@ -1,8 +1,10 @@
 /* Discourse Inline Tooltips Theme Component https://github.com/denvergeeks/discourse-inline-tooltips/common/common.scss */
 
+// Trigger link styling
 .inline-tip {
   display: inline;
-  
+
+  .expand-tip,
   a.expand-tip {
     text-decoration: underline;
     text-decoration-style: dotted;
@@ -13,12 +15,10 @@
     
     &:hover {
       color: var(--tertiary-high);
-      text-decoration-style: solid;
+      /* text-decoration-style: solid; */
     }
   }
 }
-
-
 
 
 .fk-d-tooltip__content[data-identifier="inline-tip"] {
@@ -127,18 +127,3 @@ body.dark-mode {
   }
 }
 
-// Trigger link styling
-.inline-tip {
-  display: inline;
-  
-  .expand-tip {
-    color: var(--tertiary);
-    text-decoration: underline dotted;
-    cursor: pointer;
-    
-    &:hover {
-      color: var(--tertiary-hover);
-      text-decoration: underline solid;
-    }
-  }
-}
