--- a/common/common.scss
+++ b/common/common.scss
@@ -1,60 +1,72 @@
-.inline-tip-content {
-  // Ensure proper inline flow
-  display: inline-block;
-  max-width: 300px;
+/* Discourse Inline Tooltips Theme Component https://github.com/denvergeeks/discourse-inline-tooltips/common/common.scss */
+
+.inline-tip {
+  display: inline;
   
-  // Inline elements should stay inline
-  strong, em, code, a, span {
-    display: inline;
-  }
-  
-  // Block elements get proper spacing
-  p, div {
-    display: block;
-    margin: 0.25em 0;
+  a.expand-tip {
+    text-decoration: underline;
+    text-decoration-style: dotted;
+    color: var(--tertiary);
+    cursor: help;
     
+    &:hover {
+      color: var(--tertiary-high);
+      text-decoration-style: solid;
+    }
+  }
+}
+
+.fk-d-tooltip__content[data-identifier="inline-tip"] {
+  overflow-wrap: break-word;
+  font-size: var(--font-down-1);
+  
+  .fk-d-tooltip__inner-content {
+    flex-direction: column;
+  }
+
+  img {
+    height: auto;
+    max-width: 100%;
+  }
+
+  p {
+    margin: 0;
+    min-width: 0;
+    max-width: 100%;
+          
     &:first-child {
       margin-top: 0;
     }
-    
+      
     &:last-child {
       margin-bottom: 0;
     }
   }
-  
-  h1, h2, h3, h4, h5, h6 {
-    display: block;
-    margin: 0.5em 0 0.25em 0;
+    
+  strong, b {
+    font-weight: bold;
   }
-  
-  ul, ol {
-    margin: 0.5em 0;
-    padding-left: 1.5em;
+    
+  em, i {
+    font-style: italic;
   }
-  
-  img {
-    max-width: 100%;
-    display: block;
-    margin: 0.5em 0;
-  }
-  
-  table {
-    margin: 0.5em 0;
+    
+  code {
+    background: var(--primary-very-low);
+    padding: 0.2em 0.4em;
+    border-radius: 3px;
+    font-size: 0.9em;
   }
 }
 
-// Trigger link styling
-.inline-tip {
-  display: inline;
-  
-  .expand-tip {
-    color: var(--tertiary);
-    text-decoration: underline dotted;
-    cursor: pointer;
-    
-    &:hover {
-      color: var(--tertiary-hover);
-      text-decoration: underline solid;
+body.dark-mode {
+  .inline-tip {
+    a.expand-tip {
+      color: var(--tertiary);
+      
+      &:hover {
+        color: var(--tertiary-high);
+      }
     }
   }
 }
