--- a/common/common.scss
+++ b/common/common.scss
@@ -19,7 +19,8 @@
 .fk-d-tooltip__content[data-identifier="inline-tip"] {
   overflow-wrap: break-word;
   font-size: var(--font-down-1);
-  padding: 1em;
+  padding: 1em 0 1em 1em;
+  max-height: 600px;
   
   .fk-d-tooltip__inner-content {
     flex-direction: column;
