--- a/common/common.scss
+++ b/common/common.scss
@@ -21,7 +21,8 @@
   font-size: var(--font-down-1);
   
   .fk-d-tooltip__inner-content {
-    flex-direction: column;
+    /* flex-direction: column; */
+    display: block;
     overflow: auto;
     max-height: 600px;
   }
