--- a/common/common.scss
+++ b/common/common.scss
@@ -1,143 +1,76 @@
-// Inline Tips Component Styles
+/* Discourse Inline Tooltips Theme Component https://github.com/denvergeeks/discourse-inline-tooltips/common/common.scss */
 
-// The trigger link
-.expand-tip {
-  color: var(--tertiary);
-  text-decoration: underline;
-  text-decoration-style: dotted;
-  cursor: pointer;
-  font-weight: 500;
+.inline-tip {
+  display: inline;
   
-  &:hover {
-    color: var(--tertiary-high);
-    text-decoration-style: solid;
+  a.expand-tip {
+    text-decoration: underline;
+    text-decoration-style: dotted;
+    color: var(--tertiary);
+    cursor: help;
+    
+    &:hover {
+      color: var(--tertiary-high);
+      text-decoration-style: solid;
+    }
   }
 }
 
-// The tooltip content container
-.inline-tip-content {
-  max-width: 500px;
-  max-height: 600px;
-  overflow-y: auto;
-  padding: 1em;
-  line-height: 1.5;
+.fk-d-tooltip__content[data-identifier="inline-tip"] {
+  overflow-wrap: break-word;
+  font-size: var(--font-down-1);
   
-  // Style content inside tooltip
-  h1, h2, h3, h4, h5, h6 {
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
-    
-    &:first-child {
-      margin-top: 0;
-    }
+  .fk-d-tooltip__inner-content {
+    /* flex-direction: column; */
+    display: block;
+    overflow: auto;
+    max-height: 600px;
   }
-  
+
+  img {
+    height: auto;
+    max-width: 100%;
+  }
+
   p {
-    margin: 0.5em 0;
-    
+    margin: 0;
+    min-width: 0;
+    max-width: 100%;
+          
     &:first-child {
       margin-top: 0;
     }
-    
+      
     &:last-child {
       margin-bottom: 0;
     }
   }
-  
-  img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-    margin: 0.5em 0;
-    border-radius: 4px;
-  }
-  
-  iframe {
-    max-width: 100%;
-    border: 1px solid var(--primary-low);
-    border-radius: 4px;
-    margin: 0.5em 0;
-  }
-  
-  ul, ol {
-    margin: 0.5em 0;
-    padding-left: 1.5em;
-  }
-  
-  li {
-    margin: 0.25em 0;
-  }
-  
+    
   strong, b {
     font-weight: bold;
   }
-  
+    
   em, i {
     font-style: italic;
   }
-  
+
   code {
     background: var(--primary-very-low);
     padding: 0.2em 0.4em;
     border-radius: 3px;
-    font-family: monospace;
     font-size: 0.9em;
-  }
-  
-  pre {
-    background: var(--primary-very-low);
-    padding: 1em;
-    border-radius: 4px;
-    overflow-x: auto;
-    
-    code {
-      background: none;
-      padding: 0;
-    }
-  }
-  
-  blockquote {
-    border-left: 3px solid var(--primary-low);
-    padding-left: 1em;
-    margin: 0.5em 0;
-    color: var(--primary-medium);
-  }
-  
-  a {
-    color: var(--tertiary);
-    text-decoration: underline;
-    
-    &:hover {
-      color: var(--tertiary-high);
-    }
-  }
-  
-  // Spacing for line breaks
-  br {
-    display: block;
-    content: "";
-    margin: 0.5em 0;
+    white-space: normal;    
   }
 }
 
-// The wrapper span (inline element)
-.inline-tip {
-  display: inline;
-}
-
-// Mobile responsiveness
-@media screen and (max-width: 768px) {
-  .inline-tip-content {
-    max-width: 90vw;
-    max-height: 70vh;
-  }
-}
-
-// Dark mode adjustments (optional)
-.dark-scheme {
-  .inline-tip-content {
-    iframe {
-      border-color: var(--primary-high);
+body.dark-mode {
+  .inline-tip {
+    a.expand-tip {
+      color: var(--tertiary);
+      
+      &:hover {
+        color: var(--tertiary-high);
+      }
     }
   }
 }
