--- a/common/common.scss
+++ b/common/common.scss
@@ -1,4 +1,4 @@
-/* Discourse Inline Tooltips Theme Component https://github.com/denvergeeks/discourse-inline-tooltips/common/common.scss */
+/* nOObishme Discourse Inline Tooltips Theme Component https://github.com/noobishme/discourse-inline-tooltips/common/common.scss */
 
 .inline-tip {
   display: inline;
