--- a/common/common.scss
+++ b/common/common.scss
@@ -59,7 +59,7 @@
     padding: 0.2em 0.4em;
     border-radius: 3px;
     font-size: 0.9em;
-    white-space: normal;    
+    white-space: break-spaces;    
   }
 }
 
